Fixed vertical overflow, added box shadow to header and border-top to the links container

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,5 @@ body {
   font-family: "Red Hat Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
